--- a/WebContent/front/index.html
+++ b/WebContent/front/index.html
@@ -52,7 +52,7 @@
         <p id="event_result"> Content goes here</p>
     </div>
 
-    <div id="footer"><a href="index.html">&copy;<i>2015-</i>Copyright W3School.com.cn</a></div>
+    <div id="footer"><a href="index.html">&copy;<i>2015-</i>www.scut.edu.cn, All Copyright Reserved</a></div>
 
     <script>
 
