开发环境调试，目前是intellij下面开发，不像eclipse下的plugin支持，mapreduce程序需要打成jar包，使用runjar类提交到生产环境/集群中运行。win下面搭建的hadoop伪分布集群，基本上通过获取管理员权限，增加创建链接功能可以跑通，最终还是会出现文件名不合法的问题，坚定一点，绝对不能再win下面做生产环境，有集群之后把jar包提交到集群中去跑

--- a/WebContent/front/index.html
+++ b/WebContent/front/index.html
@@ -50,16 +50,12 @@
         </ul>
 
         <p id="event_result"> Content goes here</p>
+
+
     </div>
 
-    <div id="footer"><a href="index.html">&copy;<i>2015-</i>www.scut.edu.cn, All Copyright Reserved</a></div>
+    <div id="footer">&copy;<i>2015-</i><a href="index.html">www.scut.edu.cn</a>, All Copyright Reserved</div>
 
-    <script>
-
-    </script>
-    <script>
-
-    </script>
 
 </div>
 </body>
