--- a/WebContent/front/index.html
+++ b/WebContent/front/index.html
@@ -8,7 +8,7 @@
 
     <script src="../js/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="../js/jstree.min.js" type="text/javascript"></script>
-    <script src="../js/IndexJs.js"></script>
+    <script src="../js/indexJs.js"></script>
 </head>
 <body>
 <div id="container">
